[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/levels/level_3/level_3.gd" type="Script" id=1]
[ext_resource path="res://tiles/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://art/button.png" type="Texture" id=3]
[ext_resource path="res://scenes/props/light.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/monofonto.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://audio/button_fail.wav" type="Sample" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="SampleLibrary" id=3]

samples/button_fail = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }

[node name="level" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 32
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 65536, 9, 65537, 1, 65538, 1, 65539, 1, 65540, 1, 65541, 1, 65542, 1, 65543, 1, 65544, 1, 65545, 1, 65546, 1, 65547, 1, 65549, 1, 65550, 1, 65551, 1, 65552, 6, 131072, 5, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 0, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 131083, 0, 131084, 0, 131085, 0, 131086, 0, 131087, 0, 131088, 4, 196608, 5, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 196616, 0, 196617, 0, 196618, 0, 196619, 0, 196620, 0, 196621, 0, 196622, 0, 196623, 0, 196624, 4, 262144, 5, 262145, 0, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 0, 262154, 0, 262155, 0, 262156, 0, 262157, 0, 262158, 0, 262159, 0, 262160, 4, 327680, 5, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 0, 327690, 0, 327691, 0, 327692, 0, 327693, 0, 327694, 0, 327695, 0, 327696, 4, 393216, 5, 393217, 0, 393218, 0, 393219, 0, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0, 393227, 0, 393228, 0, 393229, 0, 393230, 0, 393231, 0, 393232, 4, 458752, 5, 458753, 0, 458754, 0, 458755, 0, 458756, 0, 458757, 0, 458758, 0, 458759, 0, 458760, 0, 458761, 0, 458762, 0, 458763, 0, 458764, 0, 458765, 0, 458766, 0, 458767, 0, 458768, 4, 524288, 5, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 4, 589824, 5, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 4, 655360, 5, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 4, 720896, 5, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720906, 0, 720907, 0, 720908, 0, 720909, 0, 720910, 0, 720911, 0, 720912, 4, 786432, 5, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 0, 786439, 0, 786440, 0, 786441, 0, 786442, 0, 786443, 0, 786444, 0, 786445, 0, 786446, 0, 786447, 0, 786448, 4, 851968, 5, 851969, 0, 851970, 0, 851971, 0, 851972, 0, 851973, 0, 851974, 0, 851975, 0, 851976, 0, 851977, 0, 851978, 0, 851979, 0, 851980, 0, 851981, 0, 851982, 0, 851983, 0, 851984, 4, 917504, 5, 917505, 0, 917506, 0, 917507, 0, 917508, 0, 917509, 0, 917510, 0, 917511, 0, 917512, 0, 917513, 0, 917514, 0, 917515, 0, 917516, 0, 917517, 0, 917518, 0, 917519, 0, 917520, 4, 983041, 0, 983042, 0, 983043, 0, 983044, 0, 983045, 0, 983046, 0, 983047, 0, 983048, 0, 983049, 0, 983050, 0, 983051, 0, 983052, 0, 983053, 0, 983054, 0, 983055, 0, 983056, 4, 1048576, 8, 1048577, 1, 1048578, 1, 1048579, 1, 1048580, 1, 1048581, 1, 1048582, 1, 1048583, 1, 1048584, 1, 1048585, 1, 1048586, 1, 1048587, 1, 1048588, 1, 1048589, 1, 1048590, 1, 1048591, 1, 1048592, 7 )

[node name="button" type="Sprite" parent="."]

transform/pos = Vector2( 368, 112 )
texture = ExtResource( 3 )
hframes = 4

[node name="Area2D" type="Area2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 368, 112 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 368, 112 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="lights" type="Node2D" parent="."]

[node name="light" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 208, 176 )

[node name="light1" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 272, 176 )

[node name="light2" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 336, 176 )

[node name="light3" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 400, 176 )

[node name="light4" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 400, 240 )

[node name="light5" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 336, 240 )

[node name="light6" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 272, 240 )

[node name="light7" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 208, 240 )

[node name="light8" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 208, 304 )

[node name="light9" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 272, 304 )

[node name="light10" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 336, 304 )

[node name="light11" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 400, 304 )

[node name="light12" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 400, 368 )

[node name="light13" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 336, 368 )

[node name="light14" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 272, 368 )

[node name="light15" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 208, 368 )

[node name="light17" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 208, 432 )

[node name="light18" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 272, 432 )

[node name="light19" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 336, 432 )

[node name="light20" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 400, 432 )

[node name="light21" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 144, 432 )

[node name="light22" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 144, 368 )

[node name="light23" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 144, 304 )

[node name="light24" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 144, 240 )

[node name="light25" parent="lights" instance=ExtResource( 4 )]

transform/pos = Vector2( 144, 176 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 192.0
margin/top = 521.0
margin/right = 344.0
margin/bottom = 540.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Disable The Lights!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="toggled" from="lights/light" to="lights/light1" method="toggle"]

[connection signal="toggled" from="lights/light" to="lights/light7" method="toggle"]

[connection signal="toggled" from="lights/light" to="lights/light25" method="toggle"]

[connection signal="toggled" from="lights/light1" to="lights/light6" method="toggle"]

[connection signal="toggled" from="lights/light1" to="lights/light" method="toggle"]

[connection signal="toggled" from="lights/light1" to="lights/light2" method="toggle"]

[connection signal="toggled" from="lights/light2" to="lights/light3" method="toggle"]

[connection signal="toggled" from="lights/light2" to="lights/light1" method="toggle"]

[connection signal="toggled" from="lights/light2" to="lights/light5" method="toggle"]

[connection signal="toggled" from="lights/light3" to="lights/light4" method="toggle"]

[connection signal="toggled" from="lights/light3" to="lights/light2" method="toggle"]

[connection signal="toggled" from="lights/light4" to="lights/light11" method="toggle"]

[connection signal="toggled" from="lights/light4" to="lights/light3" method="toggle"]

[connection signal="toggled" from="lights/light4" to="lights/light5" method="toggle"]

[connection signal="toggled" from="lights/light5" to="lights/light6" method="toggle"]

[connection signal="toggled" from="lights/light5" to="lights/light4" method="toggle"]

[connection signal="toggled" from="lights/light5" to="lights/light10" method="toggle"]

[connection signal="toggled" from="lights/light5" to="lights/light2" method="toggle"]

[connection signal="toggled" from="lights/light6" to="lights/light9" method="toggle"]

[connection signal="toggled" from="lights/light6" to="lights/light1" method="toggle"]

[connection signal="toggled" from="lights/light6" to="lights/light5" method="toggle"]

[connection signal="toggled" from="lights/light6" to="lights/light7" method="toggle"]

[connection signal="toggled" from="lights/light7" to="lights/light6" method="toggle"]

[connection signal="toggled" from="lights/light7" to="lights/light24" method="toggle"]

[connection signal="toggled" from="lights/light7" to="lights/light8" method="toggle"]

[connection signal="toggled" from="lights/light7" to="lights/light" method="toggle"]

[connection signal="toggled" from="lights/light8" to="lights/light9" method="toggle"]

[connection signal="toggled" from="lights/light8" to="lights/light7" method="toggle"]

[connection signal="toggled" from="lights/light8" to="lights/light15" method="toggle"]

[connection signal="toggled" from="lights/light8" to="lights/light23" method="toggle"]

[connection signal="toggled" from="lights/light9" to="lights/light6" method="toggle"]

[connection signal="toggled" from="lights/light9" to="lights/light8" method="toggle"]

[connection signal="toggled" from="lights/light9" to="lights/light10" method="toggle"]

[connection signal="toggled" from="lights/light9" to="lights/light14" method="toggle"]

[connection signal="toggled" from="lights/light10" to="lights/light11" method="toggle"]

[connection signal="toggled" from="lights/light10" to="lights/light9" method="toggle"]

[connection signal="toggled" from="lights/light10" to="lights/light5" method="toggle"]

[connection signal="toggled" from="lights/light10" to="lights/light13" method="toggle"]

[connection signal="toggled" from="lights/light11" to="lights/light4" method="toggle"]

[connection signal="toggled" from="lights/light11" to="lights/light12" method="toggle"]

[connection signal="toggled" from="lights/light11" to="lights/light10" method="toggle"]

[connection signal="toggled" from="lights/light12" to="lights/light11" method="toggle"]

[connection signal="toggled" from="lights/light12" to="lights/light20" method="toggle"]

[connection signal="toggled" from="lights/light12" to="lights/light13" method="toggle"]

[connection signal="toggled" from="lights/light13" to="lights/light12" method="toggle"]

[connection signal="toggled" from="lights/light13" to="lights/light10" method="toggle"]

[connection signal="toggled" from="lights/light13" to="lights/light14" method="toggle"]

[connection signal="toggled" from="lights/light13" to="lights/light19" method="toggle"]

[connection signal="toggled" from="lights/light14" to="lights/light9" method="toggle"]

[connection signal="toggled" from="lights/light14" to="lights/light18" method="toggle"]

[connection signal="toggled" from="lights/light14" to="lights/light15" method="toggle"]

[connection signal="toggled" from="lights/light14" to="lights/light13" method="toggle"]

[connection signal="toggled" from="lights/light15" to="lights/light22" method="toggle"]

[connection signal="toggled" from="lights/light15" to="lights/light8" method="toggle"]

[connection signal="toggled" from="lights/light15" to="lights/light14" method="toggle"]

[connection signal="toggled" from="lights/light15" to="lights/light17" method="toggle"]

[connection signal="toggled" from="lights/light17" to="lights/light18" method="toggle"]

[connection signal="toggled" from="lights/light17" to="lights/light21" method="toggle"]

[connection signal="toggled" from="lights/light17" to="lights/light15" method="toggle"]

[connection signal="toggled" from="lights/light18" to="lights/light14" method="toggle"]

[connection signal="toggled" from="lights/light18" to="lights/light17" method="toggle"]

[connection signal="toggled" from="lights/light18" to="lights/light19" method="toggle"]

[connection signal="toggled" from="lights/light19" to="lights/light20" method="toggle"]

[connection signal="toggled" from="lights/light19" to="lights/light18" method="toggle"]

[connection signal="toggled" from="lights/light19" to="lights/light13" method="toggle"]

[connection signal="toggled" from="lights/light20" to="lights/light12" method="toggle"]

[connection signal="toggled" from="lights/light20" to="lights/light19" method="toggle"]

[connection signal="toggled" from="lights/light21" to="lights/light22" method="toggle"]

[connection signal="toggled" from="lights/light21" to="lights/light17" method="toggle"]

[connection signal="toggled" from="lights/light22" to="lights/light21" method="toggle"]

[connection signal="toggled" from="lights/light22" to="lights/light15" method="toggle"]

[connection signal="toggled" from="lights/light22" to="lights/light23" method="toggle"]

[connection signal="toggled" from="lights/light23" to="lights/light24" method="toggle"]

[connection signal="toggled" from="lights/light23" to="lights/light22" method="toggle"]

[connection signal="toggled" from="lights/light23" to="lights/light8" method="toggle"]

[connection signal="toggled" from="lights/light24" to="lights/light7" method="toggle"]

[connection signal="toggled" from="lights/light24" to="lights/light25" method="toggle"]

[connection signal="toggled" from="lights/light24" to="lights/light23" method="toggle"]

[connection signal="toggled" from="lights/light25" to="lights/light24" method="toggle"]

[connection signal="toggled" from="lights/light25" to="lights/light" method="toggle"]


